cliente: adiciona html

--- a/api/src/main/resources/templates/lista-clientes.html
+++ b/api/src/main/resources/templates/lista-clientes.html
@@ -11,7 +11,11 @@
   <tr>
     <th>ID</th>
     <th>Nome</th>
-    <!-- Outras colunas, se aplicável -->
+    <th>Email</th>
+    <th>CPF</th>
+    <th>Telefone</th>
+    <!-- Coluna adicional para links -->
+    <th>Detalhes</th>
   </tr>
   </thead>
   <tbody>
@@ -19,7 +23,13 @@
   <tr th:each="cliente : ${clientes}">
     <td th:text="${cliente.id}"></td>
     <td th:text="${cliente.nome}"></td>
-    <!-- Outras colunas, se aplicável -->
+    <td th:text="${cliente.email}"></td>
+    <td th:text="${cliente.cpf}"></td>
+    <td th:text="${cliente.telefone}"></td>
+    <!-- Coluna com link para detalhes do cliente -->
+    <td>
+      <a th:href="@{/clientes/{id}(id=${cliente.id})}" class="btn btn-info">Detalhes</a>
+    </td>
   </tr>
   </tbody>
 </table>
