templates: adiciona header

--- a/api/src/main/resources/templates/agendar-ensaio.html
+++ b/api/src/main/resources/templates/agendar-ensaio.html
@@ -6,6 +6,15 @@
   <title>Agendamento de Ensaio</title>
 </head>
 <body>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/clientes">Clientes</a></li>
+      <li><a href="/membros">Membros</a></li>
+      <li><a href="/ensaios">Ensaios</a></li>
+    </ul>
+  </nav>
+</header>
 <h1>Agendamento de Ensaio</h1>
 
 <!-- Formulário de Agendamento de Ensaio -->
