--- a/api/src/main/resources/templates/detalhes-membro.html
+++ b/api/src/main/resources/templates/detalhes-membro.html
@@ -4,6 +4,15 @@
   <title>Detalhes do Membro</title>
 </head>
 <body>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/clientes">Clientes</a></li>
+      <li><a href="/membros">Membros</a></li>
+      <li><a href="/ensaios">Ensaios</a></li>
+    </ul>
+  </nav>
+</header>
 <h1>Detalhes do Membro</h1>
 <table>
   <tr>
