--- a/api/src/main/resources/templates/lista-ensaios.html
+++ b/api/src/main/resources/templates/lista-ensaios.html
@@ -6,6 +6,15 @@
   <title>Lista de Ensaios</title>
 </head>
 <body>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/clientes">Clientes</a></li>
+      <li><a href="/membros">Membros</a></li>
+      <li><a href="/ensaios">Ensaios</a></li>
+    </ul>
+  </nav>
+</header>
 <h1>Lista de Ensaios</h1>
 <a href="/ensaios/agendar" class="btn btn-primary">Agendar Novo Ensaio</a>
 <table>
