--- a/api/src/main/resources/templates/lista-membros.html
+++ b/api/src/main/resources/templates/lista-membros.html
@@ -6,6 +6,15 @@
   <title>Lista de Membros</title>
 </head>
 <body>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/clientes">Clientes</a></li>
+      <li><a href="/membros">Membros</a></li>
+      <li><a href="/ensaios">Ensaios</a></li>
+    </ul>
+  </nav>
+</header>
 <h1>Lista de Membros</h1>
 <a href="/membros/cadastrar" class="btn btn-primary">Cadastrar Novo Membro</a>
 <table>
