--- a/api/src/main/resources/templates/confirmar-exclusao-membro.html
+++ b/api/src/main/resources/templates/confirmar-exclusao-membro.html
@@ -4,6 +4,15 @@
   <title>Confirmar Exclusão de Membro</title>
 </head>
 <body>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/clientes">Clientes</a></li>
+      <li><a href="/membros">Membros</a></li>
+      <li><a href="/ensaios">Ensaios</a></li>
+    </ul>
+  </nav>
+</header>
 <h1>Confirmar Exclusão de Membro</h1>
 <p>Tem certeza de que deseja excluir o membro abaixo?</p>
 <table>
