--- a/api/src/main/resources/templates/editar-cliente.html
+++ b/api/src/main/resources/templates/editar-cliente.html
@@ -4,6 +4,15 @@
   <title>Editar Cliente</title>
 </head>
 <body>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/clientes">Clientes</a></li>
+      <li><a href="/membros">Membros</a></li>
+      <li><a href="/ensaios">Ensaios</a></li>
+    </ul>
+  </nav>
+</header>
 <h1>Editar Cliente</h1>
 <form method="POST" th:action="@{/clientes/{id}/editar(id=${cliente.id})}" th:object="${cliente}">
   <input type="hidden" th:field="*{id}">
