--- a/api/src/main/resources/templates/lista-clientes.html
+++ b/api/src/main/resources/templates/lista-clientes.html
@@ -4,6 +4,16 @@
   <title>Lista de Clientes</title>
 </head>
 <body>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/clientes">Clientes</a></li>
+      <li><a href="/membros">Membros</a></li>
+      <li><a href="/ensaios">Ensaios</a></li>
+    </ul>
+  </nav>
+</header>
+
 <h1>Lista de Clientes</h1>
 <a href="/clientes/cadastrar" class="btn btn-primary">Cadastrar Novo Cliente</a>
 <table>
