--- a/api/src/main/resources/templates/agendar-ensaio.html
+++ b/api/src/main/resources/templates/agendar-ensaio.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
   <title>Agendamento de Ensaio</title>
 </head>
 <body>
-<header>
+<header class="header">
   <nav>
     <ul>
       <li><a href="/clientes">Clientes</a></li>
