--- a/api/src/main/resources/templates/cadastro-cliente.html
+++ b/api/src/main/resources/templates/cadastro-cliente.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>Cadastro de Cliente</title>
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
+
 </head>
 <body>
-<header>
+<header class="header">
   <nav>
     <ul>
       <li><a href="/clientes">Clientes</a></li>
