--- a/api/src/main/resources/templates/detalhes-cliente.html
+++ b/api/src/main/resources/templates/detalhes-cliente.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>Detalhes do Cliente</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+
 </head>
 <body>
-<header>
+<header class="header">
     <nav>
         <ul>
             <li><a href="/clientes">Clientes</a></li>
