--- a/api/src/main/resources/templates/lista-clientes.html
+++ b/api/src/main/resources/templates/lista-clientes.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Lista de Clientes</title>
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
-<header>
+<header class="header">
   <nav>
     <ul>
       <li><a href="/clientes">Clientes</a></li>
