--- a/api/src/main/resources/templates/lista-ensaios.html
+++ b/api/src/main/resources/templates/lista-ensaios.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lista de Ensaios</title>
+  <link rel="stylesheet" th:href="@{/css/style.css}" />
+
 </head>
 <body>
-<header>
+<header class="header">
   <nav>
     <ul>
       <li><a href="/clientes">Clientes</a></li>
