--- a/api/src/main/resources/templates/cadastro-membro.html
+++ b/api/src/main/resources/templates/cadastro-membro.html
@@ -31,7 +31,7 @@
   </div>
   <div>
     <label for="cpf">CPF:</label>
-    <input type="text" id="cpf" name="cpf" th:field="*{cpf}" pattern="\\d{10,11}" required>
+    <input type="text" id="cpf" name="cpf" th:field="*{cpf}" required>
   </div>
   <div>
     <label for="cargo">Cargo:</label>
@@ -69,7 +69,7 @@
   </div>
   <div>
     <label for="endereco.cep">CEP:</label>
-    <input type="text" id="endereco.cep" name="endereco.cep" th:field="*{endereco.cep}" pattern="\\d{8}" required>
+    <input type="text" id="endereco.cep" name="endereco.cep" th:field="*{endereco.cep}" required>
   </div>
 
   <div>
